new board with more functionality
-board generates to n size (prompted by user at start)
-board built using table, cells stored in a 2d array
-randomize queens button added to add n queens to the board
-board cells hold bool value for queen placement
each cell is clickable, to change bool value to true(place queen) or false(remove queen). n queens allowed on board at a time

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,34 +1,35 @@
-*
+#table, #tableDiv
 {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.board
-{
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,80px);
-    grid-template-rows: repeat(auto-fit,80px);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 640px;
-    height: 640px;
     border: 1px solid black;
+    border-collapse: collapse;
 }
-
-.square
+#buttonDiv
+{
+    display: flex;
+    justify-content:center;
+    margin-top: 20px;
+}
+td,tr
 {
     height: 80px;
     width: 80px;
     border: 1px solid black;
+    border-collapse: collapse;
+    padding:0;
+    margin:0;
 }
-.black
+tr:nth-child(even) td 
 {
-    background: black;
+    background-color: lightgray;		
 }
-
+tr:nth-child(odd) td 
+{
+    background-color: white;
+}
+#img
+{
+    max-height: 100%;
+    max-width: 100%; 
+}
+                
+              
